--- a/paper/1-catalog/preamble.tex
+++ b/paper/1-catalog/preamble.tex
@@ -49,6 +49,7 @@
 % Unit shortcuts
 \newcommand{\msun}{\ensuremath{\mathrm{M}_\odot}}
 \newcommand{\kms}{\ensuremath{\mathrm{km}~\mathrm{s}^{-1}}}
+\newcommand{\mps}{\ensuremath{\mathrm{m}~\mathrm{s}^{-1}}}
 \newcommand{\pc}{\ensuremath{\mathrm{pc}}}
 \newcommand{\kpc}{\ensuremath{\mathrm{kpc}}}
 \newcommand{\kmskpc}{\ensuremath{\mathrm{km}~\mathrm{s}^{-1}~\mathrm{kpc}^{-1}}}
