--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -46,7 +46,9 @@
 \newcommand{\nposterior}{256}
 \newcommand{\nstars}{96,231}
 \newcommand{\nvisits}{397,559}
-\newcommand{\ncompanions}{xx}
+\newcommand{\ncontrol}{16,384}
+\newcommand{\nunimodal}{XX}
+\newcommand{\nmultimodal}{XX}
 
 % for response to referee
 % \renewcommand{\resp}[1]{#1}
@@ -102,17 +104,16 @@ perform a search for secondary companions of over 100,000 red-giant
 stars observed in the
 \apogee\ survey (\DR) with $\geq 3$ spectroscopic epochs.
 % Methods
-We select stars with probable companions by making a cut on our posterior belief about
-the amplitude of the stellar radial-velocity variation induced by the orbit \todo{do we?}.
+We select stars with probable companions by making a cut on our posterior belief
+about the amplitude of the stellar radial-velocity variation induced by the
+orbit.
 % Results
-We provide (1)~a catalog of \todo{\ncompanions} companions for which the stellar companion
-properties can be confidently determined in a posterior sense,
-(2)~a catalog of stars \todo{YYY} stars that likely
-have companions, but for which (in most cases) more observations
-would be needed to uniquely
-determine the orbital properties, and (3)~posterior samplings for all orbital-companion
-parameters for all \nstars\
-stars in the parent sample.
+We provide (1)~a catalog of \nunimodal\ companions for which the stellar
+companion properties can be confidently determined in a posterior sense, (2)~a
+catalog of stars \nmultimodal\ stars that likely have companions, but for which
+(in most cases) more observations would be needed to uniquely determine the
+orbital properties, and (3)~posterior samplings for all orbital-companion
+parameters for all \nstars\ stars in the parent sample.
 We highlight interesting systems and show the characteristics of stars with
 confidently determined companion properties.
 \end{abstract}
@@ -533,14 +534,31 @@ equivalent to concatenating the results from a second, independent run of
 If at the end of this second run the target still has fewer than \nposterior\
 samples, the sampling is flagged as ``incomplete.''
 
-\subsection{Control sample}
+\subsection{Null control sample}
 \label{sec:control-sample}
 
-\todo{describe how we make it}
+We construct a control sample of simulated data with no RV variability to assess
+our false-positive rates in the selections below (see
+\sectionname~\ref{sec:results}).
+We randomly pick \ncontrol\ stars from the parent sample used in this work and
+replace the visit velocity measurements with simulated data.
+For each star $n$, we randomly sample an excess variance parameter value from
+the prior, $s_n$.
+For each visit $k$, we then sample a new velocity $v_{nk}$ by drawing from a
+Gaussian with mean equal to the mean of the real data visit velocities,
+$\bar{v}_n$, and variance equal to the sum of the visit variance (uncertainty),
+$\sigma_{nk}$, and the excess variance,
+\begin{equation}
+    v_{nk} \sim \mathcal{N}(\bar{v}_n, \sigma_{nk}^2 + s_n^2) \quad .
+\end{equation}
+When we save the control data, we only store the visit uncertainty and
+``forget'' the fact that the simulated data is generated with excess variance.
+
 
 % \subsection{Implementation notes}
 %
 % \todo{Nontrivial computation - details about running on cluster, TheJoker vs. emcee}
+
 
 \section{Experiment: infer the excess variance distribution}
 \label{sec:inferjitter}
@@ -644,6 +662,10 @@ sample is available online.
 \todo{Structure of table, where to download, make a webpage with some
 information?}
 
+We also run on the null control sample (see \sectionname~\ref{sec:control}) with
+the same parameters.
+\todo{summary of this run - do any stars get flagged as needs MCMC/etc?}
+
 
 \subsection{Stars with companions}
 \label{sec:catalog-confident}
@@ -657,21 +679,66 @@ for a given system.
 From the radial velocity data alone, there is therefore no way to define a
 simple cut to select a complete sample of stars with companions.
 Nevertheless, it is possible to define a cut that selects stars with
-high-confidence companions while similarly minimizing an estimated
-false-positive rate.
-
-\todo{False-positive estimate using the null control sample.}
+high-confidence companions.
 
 We select a sample of stars that confidently have companions using percentiles
 computed from the posterior samples in the velocity semi-amplitude parameter,
 $K$.
-\figurename~\ref{fig:} shows distributions of percentiles in $\ln K$ computed
-for all stars with posterior samplings from \thejoker.
-\todo{percentiles figure}
+\figurename~\ref{fig:lnK-percentiles}, left panel, shows distributions of
+percentiles in $\ln K$ computed for all stars with posterior samplings from
+\thejoker.
+\figurename~\ref{fig:lnK-percentiles}, right panel, shows the same for posterior
+samplings for the null control sample.
+We define a cut in the \todo{XX} percentile of the $\ln K$ samples such that
+\todo{XX false-positives...} (vertical line in
+\figurename~\ref{fig:lnK-percentiles}); \nmultimodal\ stars pass this cut.
 
-\todo{Examples of stars with no companions at various num. epochs}
+% % Notebook: "TODO"
+% \begin{figure}[h]
+% \begin{center}
+% \includegraphics[width=\textwidth]{lnK-percentiles}
+% \end{center}
+% \caption{%
+% TODO
+% \label{fig:lnK-percentiles}
+% }
+% \end{figure}
 
-\todo{Examples of stars that meet K cut at various num. epochs}
+\tablename~\ref{tbl:} contains a subset of the \apogee\ \DR\ \texttt{allStar}
+catalog information for the stars that pass the above cut and therefore likely
+have companions; For brevity below, we refer to this sample as the ``high-$K$''
+stars, and the complimentary sample as the ``low-$K$'' stars.
+\figurename~\ref{fig:highK} shows eight examples of high-$K$ stars, i.e. stars
+that likely have companions, with different numbers of visits.
+\figurename~\ref{fig:lowK} is the same for eight low-$K$ stars, i.e. stars that
+either have no companions, low-mass companions, or companions at long periods or
+high inclination.
+
+The majority of the stars in the high-$K$ sample have poorly constrained orbital
+parameters because the posterior pdfs are very multimodal.
+
+% % Notebook: "TODO"
+% Should also include period-eccentricity panels with samples
+% \begin{figure}[h]
+% \begin{center}
+% \includegraphics[width=\textwidth]{highK}
+% \end{center}
+% \caption{%
+% TODO
+% \label{fig:highK}
+% }
+% \end{figure}
+
+% % Notebook: "TODO"
+% \begin{figure}[h]
+% \begin{center}
+% \includegraphics[width=\textwidth]{lowK}
+% \end{center}
+% \caption{%
+% TODO
+% \label{fig:lowK}
+% }
+% \end{figure}
 
 
 \subsection{Confident companions with highly constrained orbits}
