Err small edits

--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -677,9 +677,9 @@ companion properties.
 For example, the companion masses can be low mass, or at long periods, or at
 high inclination, all of which will make the velocity semi-amplitude, $K$, small
 for a given system.
-From the radial velocity data alone, there is therefore no way to define a
+Therefore, from the radial velocity data alone, there is no way to define a
 simple cut to select a complete sample of stars with companions.
-Nevertheless, it is possible to define a cut that selects stars with
+It is nevertheless possible to define a cut that selects stars with
 high-confidence companions.
 
 We select a sample of stars that confidently have companions using percentiles
