--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -717,6 +717,8 @@ high inclination.
 
 The majority of the stars in the high-$K$ sample have poorly constrained orbital
 parameters because the posterior pdfs are very multimodal.
+The high-$K$ sample includes all stars in the catalogs described in the next two
+subsections, however these two catalogs are mutually exclusive with one another.
 
 % % Notebook: "TODO"
 % Should also include period-eccentricity panels with samples
@@ -745,8 +747,31 @@ parameters because the posterior pdfs are very multimodal.
 \subsection{Confident companions with highly constrained orbits}
 \label{sec:catalog-multimodal}
 
-\todo{Many examples of stars that meet K cut but solutions limited to a few
-qualitatively different solutions}
+A subset of the high-$K$ sample (\sectionname~\ref{sec:catalog-confident}) have
+multimodal posterior distributions over orbital parameters that are limited to
+just a few qualitatively different solutions.
+For these stars, one or a few more well-timed RV measurements would likely lead
+to uniquely-determined orbital parameters.
+\todo{How exactly do we select these stars?}
+
+\figurename~\ref{fig:todo} shows a few examples of stars that meet these
+criteria.
+Note that in these cases, there are certain times at which a future observation
+would be far more informative: For example, \todo{top panel, time X vs. time Y}.
+
+% % Notebook: "TODO"
+% \begin{figure}[h]
+% \begin{center}
+% \includegraphics[width=\textwidth]{lowK}
+% \end{center}
+% \caption{%
+% TODO
+% \label{fig:lowK}
+% }
+% \end{figure}
+
+\todo{Describe catalog contents: Also include M2_min and primary mass when
+possible?}
 
 
 \subsection{Confident companions with effectively uniquely determined orbits}
@@ -754,13 +779,9 @@ qualitatively different solutions}
 
 \todo{Many examples of stars that are probably unimodal}
 
-\todo{Period - eccentricity plot? Tidal circularization (See "Debug MCMC
-continue")}
+\todo{Should figures be phase-folded?}
 
-\todo{Stars with Martig or Ness masses - m2min}
-
-\subsection{Confident companions with effectively uniquely determined orbits}
-\label{sec:catalog-unimodal}
+\todo{Also include M2_min and primary mass when possible?}
 
 \section{Results}
 \label{sec:results}
@@ -769,7 +790,8 @@ continue")}
 
 \todo{The companions that don't make sense / can't be}
 
-\todo{Period-eccentricity plot - tidal circularization}
+\todo{Period - eccentricity plot? Tidal circularization (See "Debug MCMC
+continue")}
 
 \todo{Companion mass and mass-ratio distribution for stars with Ness / Martig masses}
 
