--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -770,7 +770,7 @@ would be far more informative: For example, \todo{top panel, time X vs. time Y}.
 % }
 % \end{figure}
 
-\todo{Describe catalog contents: Also include M2_min and primary mass when
+\todo{Describe catalog contents: Also include M2min and primary mass when
 possible?}
 
 
@@ -781,19 +781,32 @@ possible?}
 
 \todo{Should figures be phase-folded?}
 
-\todo{Also include M2_min and primary mass when possible?}
+\todo{Also include M2min and primary mass when possible?}
+
 
 \section{Results}
 \label{sec:results}
 
+\subsection{Red clump stars lack short-period companions}
+
 \todo{Period-logg plot - lack of short-period companions for red clump stars?}
 
-\todo{The companions that don't make sense / can't be}
+
+\subsection{Evidence for tidal circularization at $P\sim 10~\textrm{day}$}
 
 \todo{Period - eccentricity plot? Tidal circularization (See "Debug MCMC
 continue")}
 
+
+\subsection{Companion masses and mass ratios}
+
 \todo{Companion mass and mass-ratio distribution for stars with Ness / Martig masses}
+
+
+\subsection{Impossible companions}
+
+\todo{The companions that don't make sense / can't be}
+
 
 \section{Discussion}
 
