Fewer short-period companions

--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -791,6 +791,18 @@ possible?}
 
 \todo{Period-logg plot - lack of short-period companions for red clump stars?}
 
+Red clump (\RC) stars are horizontal branch stars and have therefore already
+climbed the RGB, where the surface of the star can grow to be several AU in
+size.
+\RC\ stars are therefore expected to less frequently have companions at short
+periods ($P<XX$~day) because the companions would have been engulfed during the
+RGB phase.
+\figurename~\ref{fig:todo} hints that there is an apparent dearth of
+short-period companions around $\log g \sim 2.5$ (the approximate location of
+the red clump).
+Another way to look at this is to compare the fraction of subgiant stars with
+short-period companions to the same for stars near the \RC.
+
 
 \subsection{Evidence for tidal circularization at $P\sim 10~\textrm{day}$}
 
@@ -803,7 +815,7 @@ continue")}
 \todo{Companion mass and mass-ratio distribution for stars with Ness / Martig masses}
 
 
-\subsection{Impossible companions}
+\subsection{Impossible companions: coherent oscillations?}
 
 \todo{The companions that don't make sense / can't be}
 
@@ -972,7 +984,7 @@ We are SB1 only, but should do SB2 as well - no reason to restrict.
 
 \section{Conclusions}
 
-Tables available online, full code open source.\footnote{The code used in this
+\todo{catalogs available online}, full code open source.\footnote{The code used in this
 project is available from \url{https://github.com/adrn/TwoFace} under the MIT
 open-source software license.}
 
