Placeholder for fractions

--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -802,6 +802,9 @@ short-period companions around $\log g \sim 2.5$ (the approximate location of
 the red clump).
 Another way to look at this is to compare the fraction of subgiant stars with
 short-period companions to the same for stars near the \RC.
+We find that, empirically, XX\% of the subgiants and YY\% of the \RC\ stars have
+companions with $XX < P < XX$~day.
+\todo{Assuming selection function doesn't preferentially bias...}
 
 
 \subsection{Evidence for tidal circularization at $P\sim 10~\textrm{day}$}
