--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -802,12 +802,18 @@ short-period companions around $\log g \sim 2.5$ (the approximate location of
 the red clump).
 Another way to look at this is to compare the fraction of subgiant stars with
 short-period companions to the same for stars near the \RC.
+
+\todo{To assess this, take boxes in log g-Teff}
 We find that, empirically, XX\% of the subgiants and YY\% of the \RC\ stars have
 companions with $XX < P < XX$~day.
 \todo{Assuming selection function doesn't preferentially bias...}
 
 
 \subsection{Evidence for tidal circularization at $P\sim 10~\textrm{day}$}
+
+\todo{Expectation from theory? What's spectial at 10 days?}
+
+\figurename~\ref{fig:todo} shows the orbital period and eccentricity...
 
 \todo{Period - eccentricity plot? Tidal circularization (See "Debug MCMC
 continue")}
