--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -90,19 +90,17 @@
 % Context
 Repeat radial-velocity measurements of stars can be used to identify stellar,
 sub-stellar, and planetary-mass companions.
-Even a very small number of observation epochs can be useful for detecting companions,
-though such data can be difficult to use for characterizing
+Even a very small number of observation epochs can be useful for detecting
+companions, though such data can be difficult to use for characterizing
 individual systems:
-There can be multiple qualitatively different orbital solutions that fit the data.
-For these reasons, we custom-built a Monte Carlo sampler (\thejoker)
-that delivers reliable (and often highly
-multi-modal) posterior samplings for companion orbital parameters given sparse
-radial-velocity data.
+There can be multiple qualitatively different orbital solutions that fit the
+data.
+For these reasons, we custom-built a Monte Carlo sampler (\thejoker) that
+delivers reliable (and often highly multi-modal) posterior samplings for
+companion orbital parameters given sparse radial-velocity data.
 % Aims
-Here we
-perform a search for secondary companions of over 100,000 red-giant
-stars observed in the
-\apogee\ survey (\DR) with $\geq 3$ spectroscopic epochs.
+Here we perform a search for secondary companions of \nstars\ red-giant stars
+observed in the \apogee\ survey (\DR) with $\geq 3$ spectroscopic epochs.
 % Methods
 We select stars with probable companions by making a cut on our posterior belief
 about the amplitude of the stellar radial-velocity variation induced by the
@@ -110,10 +108,10 @@ orbit.
 % Results
 We provide (1)~a catalog of \nunimodal\ companions for which the stellar
 companion properties can be confidently determined in a posterior sense, (2)~a
-catalog of stars \nmultimodal\ stars that likely have companions, but for which
+catalog of \nmultimodal\ stars that likely have companions, but for which
 (in most cases) more observations would be needed to uniquely determine the
 orbital properties, and (3)~posterior samplings for all orbital-companion
-parameters for all \nstars\ stars in the parent sample.
+parameters for all stars in the parent sample.
 We highlight interesting systems and show the characteristics of stars with
 confidently determined companion properties.
 \end{abstract}
