--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -985,19 +985,23 @@ TODO:
 
 \subsection{Population inference}
 
+
+
 Comment on things we could do with these samples hierarchical inference...
 
 We are SB1 only, but should do SB2 as well - no reason to restrict.
 
 \section{Conclusions}
 
-\todo{catalogs available online}, full code open source.\footnote{The code used in this
-project is available from \url{https://github.com/adrn/TwoFace} under the MIT
-open-source software license.}
+All companion catalogs described in this work (\sectionname~\ref{sec:catalogs})
+are available online at \todo{XX}.
+The source code for this project is open source and available from
+\url{https://github.com/adrn/TwoFace} under the MIT open source software
+license.
 
 \acknowledgements
 
-It is a pleasure to thank Keith Hawkins (Columbia), XXXXXXX.
+It is a pleasure to thank Keith Hawkins (Columbia), \todo{who else?}.
 
 The authors are pleased to acknowledge that the work reported on in this
 paper was substantially performed at the TIGRESS high performance computer
@@ -1012,10 +1016,15 @@ University Office of Information Technology's Research Computing department.
     \package{matplotlib} (\citealt{Hunter:2007}),
     \package{numpy} (\citealt{Van-der-Walt:2011}),
     \package{scipy} (\url{https://www.scipy.org/}),
-    \package{sqlalchemy} (\url{https://www.sqlalchemy.org/}).
+    \package{schwimmbad} (\todo{JOSS paper}),
+    \package{sqlalchemy} (\url{https://www.sqlalchemy.org/}),
+    \package{thejoker} (\todo{thejoker zenodo?}),
+    \package{twobody} (\todo{twobody zenodo?}).
 }
 
 \facility{\sdssiv, \apogee}
+
+\clearpage
 
 \bibliographystyle{aasjournal}
 \bibliography{refs}
