--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -691,7 +691,7 @@ $K$.
 \figurename~\ref{fig:lnK-percentiles}, shows the distribution of 1st percentiles
 of $\ln K$ computed for all stars with posterior samplings from \thejoker\
 (filled, blue histogram), along with the same for posterior samplings for the
-null control sample (solid line, black).
+null control sample (solid, dark line).
 To select stars with companions, we use a cut in the 1st percentile of the $\ln
 K$ samples such that $<1\%$ of the control sample is selected, i.e. our
 estimated false positive rate is $<1\%$.
@@ -704,7 +704,11 @@ in \figurename~\ref{fig:lnK-percentiles}); \nhighK\ stars pass this cut.
 \includegraphics[width=\textwidth]{lnK-percentiles}
 \end{center}
 \caption{%
-TODO
+Distribution of 1st percentiles in $\ln K$ (in units of \kms) for the parent
+\apogee\ sample (blue, filled) and for the control sample (solid, dark line).
+The vertical line (dashed, orange) indicates our adopted cut to select high-$K$
+stars that likely have companions; $<1\%$ of the control sample falls above this
+cut.
 \label{fig:lnK-percentiles}
 }
 \end{figure}
