--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -717,39 +717,58 @@ cut.
 catalog information for the stars that pass the above cut and therefore likely
 have companions; For brevity below, we refer to this sample as the ``high-$K$''
 stars, and the complimentary sample as the ``low-$K$'' stars.
-\figurename~\ref{fig:highK} shows eight examples of high-$K$ stars, i.e. stars
-that likely have companions, with different numbers of visits.
-\figurename~\ref{fig:lowK} is the same for eight low-$K$ stars, i.e. stars that
-either have no companions, low-mass companions, or companions at long periods or
-high inclination.
+\figurename s~\ref{fig:highK-0} and \ref{fig:highK-1} show eight examples of
+high-$K$ stars, i.e. stars that likely have companions, with different numbers
+of visits, $N$, indicated on the panels.
+\figurename s~\ref{fig:lowK-0} and \ref{fig:lowK-1} is the same for eight
+low-$K$ stars, i.e. stars that either have no companions, low-mass companions,
+or companions at long periods or high inclination.
 
 The majority of the stars in the high-$K$ sample have poorly constrained orbital
 parameters because the posterior pdfs are very multimodal.
 The high-$K$ sample includes all stars in the catalogs described in the next two
 subsections, however these two catalogs are mutually exclusive with one another.
 
-% % Notebook: "TODO"
-% Should also include period-eccentricity panels with samples
-% \begin{figure}[h]
-% \begin{center}
-% \includegraphics[width=\textwidth]{highK}
-% \end{center}
-% \caption{%
-% TODO
-% \label{fig:highK}
-% }
-% \end{figure}
+% Notebook: "HighK"
+\begin{figure}[hp]
+\begin{center}
+\includegraphics[width=\textwidth]{highK-0}
+\end{center}
+\caption{%
+TODO
+\label{fig:highK-0}
+}
+\end{figure}
 
-% % Notebook: "TODO"
-% \begin{figure}[h]
-% \begin{center}
-% \includegraphics[width=\textwidth]{lowK}
-% \end{center}
-% \caption{%
-% TODO
-% \label{fig:lowK}
-% }
-% \end{figure}
+\begin{figure}[hp]
+\begin{center}
+\includegraphics[width=\textwidth]{highK-1}
+\end{center}
+\caption{%
+TODO
+\label{fig:highK-1}
+}
+\end{figure}
+
+\begin{figure}[hp]
+\begin{center}
+\includegraphics[width=\textwidth]{lowK-0}
+\end{center}
+\caption{%
+TODO
+\label{fig:lowK-0}
+}
+\end{figure}
+
+\begin{figure}[hp]
+\begin{center}
+\includegraphics[width=\textwidth]{lowK-1}
+\end{center}
+\caption{%
+TODO
+\label{fig:lowK-1}
+}
+\end{figure}
 
 
 \subsection{Confident companions with highly constrained orbits}
